# similang-cpp

./: CMakeLists.txt  input.txt  visualize-ast.sh
grammar/: Language.g4
src/: main.cpp
src/ast/: ASTNode.h  ASTVisitor.h
src/codegen/: LLVMIRGenerator.cpp  LLVMIRGenerator.h
